--- a/index.html
+++ b/index.html
@@ -1,80 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meet Landing Page Master</title>
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meet Landing Page Master</title>
-        <link rel="stylesheet" href="./index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap"
-            rel="stylesheet">
+  <body>
+    <header>
+      <img class="logo" src="./starter-code/assets/logo.svg" alt="Logo" />
+    </header>
 
-    </head>
+    <main>
+      <section class="section-one">
+        <img
+          class="section-one__hero"
+          src="./starter-code/assets/tablet/image-hero.png"
+          alt="Hero image"
+        />
+        <img
+          class="section-one__hero-desktop image-one"
+          src="./starter-code/assets/desktop/image-hero-left.png"
+          alt="Hero image left"
+        />
+        <div class="section-one__text">
+          <h1>Group Chat for Everyone</h1>
+          <p>
+            Meet makes it easy to connect with others face-to-face virtually and
+            collaborate across any device.
+          </p>
+          <div class="buttons">
+            <button class="buttons__one">Download <span>v1.3</span></button>
+            <button class="buttons__two">What is it?</button>
+          </div>
+        </div>
+        <img
+          class="section-one__hero-desktop image-two"
+          src="./starter-code/assets/desktop/image-hero-right.png"
+          alt="Hero image right"
+        />
+      </section>
 
-    <body>
-        <main>
+      <section class="number-one">
+        <div class="number-one__line"></div>
+        <div class="number-one__cercle">
+          <h2>01</h2>
+        </div>
+      </section>
 
-            <div class="section1">
-                <img class="logo" src="./starter-code/assets/logo.svg" alt="">
-                <img class="section1imagetablet" src="./starter-code/assets/tablet/image-hero.png" alt="">
+      <section class="images">
+        <img
+          src="./starter-code/assets/desktop/image-woman-in-videocall.jpg"
+          alt="Woman in videocall image"
+        />
+        <img
+          src="./starter-code/assets/desktop/image-women-videochatting.jpg"
+          alt="Women videochatting image"
+        />
+        <img
+          src="./starter-code/assets/desktop/image-men-in-meeting.jpg"
+          alt="Men in meeting image"
+        />
+        <img src="./starter-code/assets/desktop/image-man-texting.jpg" 
+        alt="Man texting image" 
+        />
+      </section>
 
-                <div class="section1subsection">
-                    <img class="section1imagedesk imagedesk1" src="./starter-code/assets/desktop/image-hero-left.png" alt="">
-                    <div class="mainText">
-                        <h1>Group Chat for Everyone</h1>
-                        <p>Meet makes it easy to connect with others face-to-face
-                            virtually and collaborate across any device.</p>
-                        <div class="buttons">
-                            <button class="button1">Download <span>v1.3</span></button>
-                            <button class="button2">What is it?</button>
-                        </div>
-                    </div>
-                    <img class="section1imagedesk imagedesk2" src="./starter-code/assets/desktop/image-hero-right.png" alt="">
-                </div>
-            </div>
+      <section class="section-two">
+        <h3>BUILT FOR MODERN USE</h3>
+        <h2>Smarter meetings, all in one place</h2>
+        <p>
+          Send messages, share files, show your screen, and record your meetings
+          — all in one workspace. Control who can join with invite-only team
+          access, data encryption, and data export.
+        </p>
+      </section>
 
-            <div class="number1">
-                <div class="line"></div>
-                <div class="cercle">
-                    <h2>01</h2>
-                </div>
-            </div>
-
-            <div class="images">
-                <img src="./starter-code/assets/desktop/image-woman-in-videocall.jpg" alt="">
-                <img src="./starter-code/assets/desktop/image-women-videochatting.jpg" alt="">
-                <img src="./starter-code/assets/desktop/image-men-in-meeting.jpg" alt="">
-                <img src="./starter-code/assets/desktop/image-man-texting.jpg" alt="">
-            </div>
-
-            <div class="secondText">
-                <h3>BUILT FOR MODERN USE</h3>
-                <h2>Smarter meetings, all in one place</h2>
-                <p>Send messages, share files,
-                    show your screen, and record your meetings — all in one workspace.
-                    Control who can join with
-                    invite-only team access, data encryption, and data export.</p>
-            </div>
-            <div class="number2">
-                <div class="line"></div>
-                <div class="cercle">
-                    <h2>02</h2>
-                </div>
-            </div>
-            <div class="section2">
-                <div class="section2subsection">
-                    <h2>Experience more together</h2>
-                    <p>Stay connected with reliable HD meetings and unlimited
-                        one-on-one and group video sessions.</p>
-                    <button class="button2">Download v1.3</button>
-                </div>
-            </div>
-
-
-        </main>
-    </body>
-
+      <section class="number-two">
+        <div class="number-two__line"></div>
+        <div class="number-two__cercle">
+          <h2>02</h2>
+        </div>
+      </section>
+    </main>
+    
+    <footer>
+      <h2>Experience more together</h2>
+      <p>
+        Stay connected with reliable HD meetings and unlimited one-on-one and
+        group video sessions.
+      </p>
+      <button class="buttons__two">Download v1.3</button>
+    </footer>
+  </body>
 </html>
